2015-04-29  Dean Jackson  <dino@apple.com>

        Create a named CSS property for system colors
        https://bugs.webkit.org/show_bug.cgi?id=144423
        <rdar://problem/20491011>

        Reviewed by Tim Horton.

        Expose the following values to CSS color properties:
            -apple-system-blue
            -apple-system-brown
            -apple-system-gray
            -apple-system-green
            -apple-system-orange
            -apple-system-pink
            -apple-system-purple
            -apple-system-red
            -apple-system-yellow

        The new test shows the computed value for each of these colors. It
        includes generic results (no special value) and platform results for
        Mac (other than Mavericks) and iOS.

        * fast/css/apple-system-colors-expected.txt: Generic results.
        * fast/css/apple-system-colors.html: Added - the new test.
        * platform/mac/fast/css/apple-system-colors-expected.txt: Added OS X results.
        * platform/ios-simulator/fast/css/apple-system-colors-expected.txt: Added iOS results.
        * platform/mac-mavericks/fast/css/apple-system-colors-expected.txt: Generic results for Mavericks.

2015-04-29  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r183600.
        https://bugs.webkit.org/show_bug.cgi?id=144432

        New tests time out everywhere (Requested by ap on #webkit).

        Reverted changeset:

        "Crash at WebCore::Document::absoluteRegionForEventTargets"
        https://bugs.webkit.org/show_bug.cgi?id=144426
        http://trac.webkit.org/changeset/183600

2015-04-29  Alexey Proskuryakov  <ap@apple.com>

        fast/frames/flattening/iframe-flattening-resize-event-count.html times out on Yosemite WK2
        https://bugs.webkit.org/show_bug.cgi?id=144155

        * fast/frames/flattening/resources/iframe-to-resize.html: Added more logging to the test.

2015-04-29  Martin Robinson  <mrobinson@igalia.com>
