@@ -7,4 +7,7 @@ PASS document.querySelectorAll('div')[''] === undefined is true
 PASS document.getElementsByTagName('div')[''] === undefined is true
 PASS document.body.children[''] === undefined is true
 PASS document.all[''] === undefined is true
+PASS container.querySelectorAll('div')[''] === undefined is true
+PASS container.getElementsByTagName('div')[''] === undefined is true
+PASS container.children[''] === undefined is true
 
