@@ -1,3 +1,14 @@
+2015-04-29  Joseph Pecoraro  <pecoraro@apple.com>
+
+        LiveNodeList may unexpectedly return an element for empty string
+        https://bugs.webkit.org/show_bug.cgi?id=144429
+
+        Reviewed by Darin Adler.
+
+        * dom/LiveNodeList.cpp:
+        (WebCore::LiveNodeList::namedItem):
+        Never return a result for an empty string.
+
 2015-04-29  Gyuyoung Kim  <gyuyoung.kim@webkit.org>
 
         Remove PassRefPtr in SVGFEFooElement classes
